# StockBot

./: .gitignore  Dockerfile  README.md  fileStructure.txt  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
config/: config.py  dev-config.ini  test-config.ini
jupyter-notebooks/: KO.csv  stockData.ipynb
stockBot/: StockBot.py  config.ini  stockBot.py
stockBot/Alogrithms/: Algorithm.py  AlgorithmFactory.py  algorithm.py  simple.py
stockBot/algorithms/: AlgorithmFactory.py  Simple.py
stockBot/algorithms_package/: algorithms.py
stockBot/helpers/: algorithms.py  api.py  brokerFactory.py  brokers.py  configHandler.py  dataHandler.py  data_source.py  datahandler.py  symbolInfo.py  transaction.py
tests/: test_StockBot.py
tests/Simulation/: bankAccount.py  config.ini  data_handler.py  simulation.py  testDataHandler.py
tests/Unit_tests/: test_StockBot.py
tests/example/: data_handler.py  simulation.py
tests/simulation/: bank_account.py  data_handler.py  simulation.py  test_broker.py  test_data_source.py
tests/simulation_unit_tests/: test_data_handler.py
tests/unit-tests/: test_StockBot.py
tests/unit_tests/: test_stockbot.py
tests/unit_tests/simulation/: test_data_handler.py
